<resources>
    <string name="app_name">ToDoList</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">ACCEDER</string>
    <string name="singUp_button">REGISTRAR</string>
    <string name="logOut_button">Salir</string>
    <string name="floating_button">Agregar</string>
    <string name="image_description">Descripción de la imagen</string>
    <string name="image_description2">Descripción de la imagen2</string>
    <string name="default_web_client_id">350128825447-2mjhh5dhqf16qlkvtnfkp2pe6fmm9m2s.apps.googleusercontent.com</string>
    <string name="title">ToDoList</string>
    <string name="desctarea">Descripción</string>
    <string name="nombretarea">Nombre de la Tarea</string>
    <string name="priority">Prioridad: </string>
    <string-array name="SpinnerItems">
        <item>Baja</item>
        <item>Media</item>
        <item>Urgente</item>
    </string-array>
    <string name="descbtncalendar">Descripción</string>
    <string name="selecthour">Selecciona fecha y hora</string>
    <string name="txtNombre">Nombre:</string>
    <string name="txtDesc">Descripción:</string>
    <string name="txtFecha">Fecha y hora:</string>
    <string name="txtPrioridad">Prioridad:</string>
    <string name="txtNombre2">Jafet</string>
    <string name="txtDesc2">Trapear</string>
    <string name="txtFecha2">10/06/2024 19:00</string>
    <string name="txtPrioridad2">Urgente</string>
    <string name="btnEditar">EDITAR</string>
    <string name="btnEliminar">ELIMINAR</string>
    <string name="search">search</string>
    <string name="priority2">Prioridad</string>
    <string name="baja">Baja</string>
    <string name="media">Media</string>
    <string name="urgente">Urgente</string>
    <string name="exit">Cerrar Sesión</string>
    <string name="image_description3">Descripción de la imagen</string>
    <string name="Todas">(Todas)</string>
    <string name="checkNoti">Notificarme</string>
    <string name="image_description4">Descripción de la imagen</string>
    <string name="version">v1.0.3</string>
</resources>