<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/black"
        android:hint="@string/nombretarea"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        tools:ignore="Autofill,VisualLintTextFieldSize,TextContrastCheck" />

    <EditText
        android:id="@+id/descEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="@color/black"
        android:hint="@string/desctarea"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray"
        tools:ignore="Autofill,VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp">

        <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/shadow"
            android:contentDescription="@string/descbtncalendar"
            android:padding="10dp"
            android:src="@drawable/ic_calendar"
            tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/selecthour" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"/>

        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:entries="@array/SpinnerItems"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:background="@drawable/spinner_border"/>
    </LinearLayout>



</LinearLayout>